--- a/VCA/locale/fa/LC_MESSAGES/django.po
+++ b/VCA/locale/fa/LC_MESSAGES/django.po
@@ -8,17 +8,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-23 15:57+0430\n"
+"POT-Creation-Date: 2023-08-24 12:46+0430\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Amirali Fakhar <fakharamirali@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
 #: .\VCA\admin.py:12
 msgid "Is Deprecated"
-msgstr ""
+msgstr "آیا منقضی شده"
 
 #: .\VCA\admin.py:17
 msgid "Yes"
@@ -57,17 +58,21 @@ msgstr "وابستگی"
 msgid "Version Control Application"
 msgstr "اپلیکیشن کنترل نسخه"
 
-#: .\VCA\mixins.py:95
+#: .\VCA\docs.py:3
+msgid "Register your view in Django Admin"
+msgstr "ویو خود را در مدیریت جنگو ثبت کنید"
+
+#: .\VCA\mixins.py:96
 msgid "Please first register your api view"
 msgstr "لطفا اول ویو خود را ثبت کنید"
 
-#: .\VCA\mixins.py:101
+#: .\VCA\mixins.py:102
 msgid "Not Registered"
 msgstr "ثبت نشده"
 
 #: .\VCA\models.py:35 .\VCA\models.py:48
-msgid "Deprecated At"
-msgstr ""
+msgid "Deprecate Date"
+msgstr "تاریخ انقضا"
 
 #: .\VCA\models.py:52
 msgid "Deprecated"
@@ -94,8 +99,8 @@ msgid "Name"
 msgstr "نام"
 
 #: .\VCA\models.py:80
-msgid "Added Feature"
-msgstr ""
+msgid "Added Features"
+msgstr "ویژگی های اضافه شده"
 
 #: .\VCA\models.py:94
 msgid "Previous Versions"
